--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
             }
 
             var enableQueriesInFullPerspective = true;
-            var selectedLanguage = 'es_UY';
-            var selectedFlag = 'img/flags/uy.png';
+            var selectedLanguage = 'en-US';
+            var selectedFlag = 'img/flags/us.png';
             var currentPerspective = "home";
 
             //It can be time consuming to load all the collections into mongo.  If you are only loading one collection
@@ -99,17 +99,17 @@
             };
 
             var options = {
-                serverUrl: "http://104.131.201.98/api/snomed",
-                edition: "uy-edition",
-                release: "v20171215",
-                releaseName: "UY Edition 20171215",
+                serverUrl: "http://ama-browser.termspace.com/api/snomed",
+                edition: "en-edition",
+                release: "v20180131",
+                releaseName: "AMA Edition 20180131",
                 showIds: false,
                 hideNotAcceptable: true,
                 displayInactiveDescriptions: false,
                 displaySynonyms: true,
                 selectedView: "inferred",
                 displayChildren: false,
-                langRefset: ["5641000179103"],
+                langRefset: ["900000000000509007"],
                 closeButton: false,
                 collapseButton: false,
                 linkerButton: true,
@@ -212,7 +212,7 @@
 
             function start() {
                 // Read parameters
-                countryIcons["5631000179106"] = "uy";
+                countryIcons["11000207107"] = "en";
                 $(function() {
                     $.extend($.fn.disableTextSelect = function() {
                         return this.each(function() {
@@ -245,13 +245,13 @@
 
                 var edition = QueryString.edition;
                 if (typeof edition == "undefined" || edition == null || edition == "") {
-                    edition = "uy-edition";
+                    edition = "en-edition";
                 }
                 options.edition = edition;
 
                 var release = QueryString.release;
                 if (typeof release == "undefined" || release == null || release == "") {
-                    release = "v20171215";
+                    release = "v20180131";
                 }
                 options.release = release;
 
@@ -928,8 +928,8 @@
                                         <!--reloadCurrentPerspective();">UK Edition 20151001</a></li>-->
                                 <!--<li><a href="javascript:void(0);" onclick="switchRelease('United States Edition 20150901', 'us-edition', 'v20150901', '900000000000509007', 'https://browser-aws-1.ihtsdotools.org/api/snomed');-->
                                         <!--reloadCurrentPerspective();">US Edition 20150901</a></li>-->
-                                <li><a href="javascript:void(0);" onclick="switchRelease('Uruguay Edition 20171215', 'uy-edition', 'v20171215', '5641000179103', 'http://104.131.201.98/api/snomed');
-                                        reloadCurrentPerspective();">UY Edition 20171215</a></li>
+                                <li><a href="javascript:void(0);" onclick="switchRelease('AMA Edition 20180131', 'en-edition', 'v20180131', '900000000000509007', 'http://104.131.201.98/api/snomed');
+                                        reloadCurrentPerspective();">UY Edition 20180131</a></li>
                             </ul>
                         </li>
                         <li class="navbar-btn" id="perspective-selector">
@@ -1027,9 +1027,9 @@
                         <!--<a class="btn btn-primary btn-lg" role="button" onclick="switchRelease('United States Edition 20150901', 'us-edition', 'v20150901', '900000000000509007', 'https://browser-aws-1.ihtsdotools.org/api/snomed');-->
                                 <!--switchLanguage('en_US', 'img/flags/us.png', true);-->
                                 <!--switchToFullHeight(404684003, 138875005);"><img src="img/flags/us.png">&nbsp;&nbsp;&nbsp;Go browsing...</span><br><span class="small">United States edition</span></a>-->
-                        <a class="btn btn-primary btn-lg" role="button" onclick="switchRelease('Uruguay Edition 20171215', 'uy-edition', 'v20171215', '5641000179103', 'http://104.131.201.98/api/snomed');
-                                switchLanguage('es_UY', 'img/flags/uy.png', true);
-                                switchToFullHeight(404684003, 138875005);"><img src="img/flags/uy.png">&nbsp;&nbsp;&nbsp;Navegar</span><br><span class="small">Uruguay edition</span></a>
+                        <a class="btn btn-primary btn-lg" role="button" onclick="switchRelease('AMA Edition 20180131', 'en-edition', 'v20180131', '900000000000509007', 'http://ama-browser.termspace.com/api/snomed');
+                                switchLanguage('en-US', 'img/flags/us.png', true);
+                                switchToFullHeight(404684003, 138875005);"><img src="img/flags/us.png">&nbsp;&nbsp;&nbsp;Navegar</span><br><span class="small">AMA edition</span></a>
                     </p>
                     <!--<p>-->
                         <!--&nbsp;&nbsp;<span class="i18n" data-i18n-id="i18n_or">or</span>&nbsp;&nbsp;-->
@@ -1044,7 +1044,7 @@
                         <!--<br><img src="img/flags/se.png">&nbsp;&nbsp;&nbsp;<a href="http://www.socialstyrelsen.se/facksprak" target="_blank">The National Board of Health and Welfare, Sweden</a>-->
                         <!--<br><img src="img/flags/gb.png">&nbsp;&nbsp;&nbsp;<a href="http://systems.hscic.gov.uk/data/uktc" target="_blank">The Health and Social Care Information Centre (HSCIC), United Kingdom</a>-->
                         <!--<br><img src="img/flags/us.png">&nbsp;&nbsp;&nbsp;<a href="http://www.nlm.nih.gov/" target="_blank">National Library of Medicine (NLM), United States</a>-->
-                        <!--<br><img src="img/flags/uy.png">&nbsp;&nbsp;&nbsp;<a href="http://www.agesic.gub.uy/innovaportal/v/4425/1/agesic/programa-saluduy.html" target="_blank">Salud.uy, Uruguay</a>-->
+                        <!--<br><img src="img/flags/uy.png">&nbsp;&nbsp;&nbsp;<a href="http://www.agesic.gub.uy/innovaportal/v/4425/1/agesic/programa-saluduy.html" target="_blank">Salud.uy, AMA</a>-->
                     <!--</p>-->
 
                     <!--<p><span class="i18n" data-i18n-id="i18n_home4">If you would like to get involved in the development, this code is available under an Apache v2 open source license. You can also find more information on the current backlog of feedback that is up for possible development here - <a href="https://confluence.ihtsdotools.org/display/TOOLS/IHTSDO+SNOMED+CT+Browser" target="_blank">IHTSDO Browser service page</a></span></p>-->
@@ -1075,7 +1075,7 @@
             </div>
             <footer>
                 <p>
-                    <small><b>&copy; Salud.uy 2017</b></small>
+                    <small><b>&copy; AMA 2018</b></small>
                 </p>
             </footer>
 
