created ama-browser branch

--- a/index.html
+++ b/index.html
@@ -929,7 +929,7 @@
                                 <!--<li><a href="javascript:void(0);" onclick="switchRelease('United States Edition 20150901', 'us-edition', 'v20150901', '900000000000509007', 'https://browser-aws-1.ihtsdotools.org/api/snomed');-->
                                         <!--reloadCurrentPerspective();">US Edition 20150901</a></li>-->
                                 <li><a href="javascript:void(0);" onclick="switchRelease('AMA Edition 20180131', 'en-edition', 'v20180131', '900000000000509007', 'http://104.131.201.98/api/snomed');
-                                        reloadCurrentPerspective();">UY Edition 20180131</a></li>
+                                        reloadCurrentPerspective();">AMA Edition 20180131</a></li>
                             </ul>
                         </li>
                         <li class="navbar-btn" id="perspective-selector">
