--- a/index.html
+++ b/index.html
@@ -928,7 +928,7 @@
                                         <!--reloadCurrentPerspective();">UK Edition 20151001</a></li>-->
                                 <!--<li><a href="javascript:void(0);" onclick="switchRelease('United States Edition 20150901', 'us-edition', 'v20150901', '900000000000509007', 'https://browser-aws-1.ihtsdotools.org/api/snomed');-->
                                         <!--reloadCurrentPerspective();">US Edition 20150901</a></li>-->
-                                <li><a href="javascript:void(0);" onclick="switchRelease('AMA Edition 20180131', 'en-edition', 'v20180131', '900000000000509007', 'http://104.131.201.98/api/snomed');
+                                <li><a href="javascript:void(0);" onclick="switchRelease('AMA Edition 20180131', 'en-edition', 'v20180131', '900000000000509007', 'http://ama-browser.termspace.com/api/snomed');
                                         reloadCurrentPerspective();">AMA Edition 20180131</a></li>
                             </ul>
                         </li>
@@ -1026,7 +1026,7 @@
                                 <!--switchToFullHeight(404684003, 138875005);"><img src="img/flags/us.png">&nbsp;&nbsp;&nbsp;Go browsing...</span><br><span class="small">United States edition</span></a>-->
                         <a class="btn btn-primary btn-lg" role="button" onclick="switchRelease('AMA Edition 20180131', 'en-edition', 'v20180131', '900000000000509007', 'http://ama-browser.termspace.com/api/snomed');
                                 switchLanguage('en-US', 'img/flags/us.png', true);
-                                switchToFullHeight(404684003, 138875005);"><img src="img/flags/us.png">&nbsp;&nbsp;&nbsp;Navegar</span><br><span class="small">AMA edition</span></a>
+                                switchToFullHeight(404684003, 138875005);"><img src="img/flags/us.png">&nbsp;&nbsp;&nbsp;Browse</span><br><span class="small">AMA edition</span></a>
                     </p>
                     <!--<p>-->
                         <!--&nbsp;&nbsp;<span class="i18n" data-i18n-id="i18n_or">or</span>&nbsp;&nbsp;-->
