created solor-browser branch

--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
             var options = {
                 serverUrl: "http://ama-browser.termspace.com/api/snomed",
                 edition: "en-edition",
-                release: "v20180131",
-                releaseName: "AMA Edition 20180131",
+                release: "v20171114",
+                releaseName: "SOLOR Edition 20171114",
                 showIds: false,
                 hideNotAcceptable: true,
                 displayInactiveDescriptions: false,
@@ -251,7 +251,7 @@
 
                 var release = QueryString.release;
                 if (typeof release == "undefined" || release == null || release == "") {
-                    release = "v20180131";
+                    release = "v20171114";
                 }
                 options.release = release;
 
@@ -928,8 +928,8 @@
                                         <!--reloadCurrentPerspective();">UK Edition 20151001</a></li>-->
                                 <!--<li><a href="javascript:void(0);" onclick="switchRelease('United States Edition 20150901', 'us-edition', 'v20150901', '900000000000509007', 'https://browser-aws-1.ihtsdotools.org/api/snomed');-->
                                         <!--reloadCurrentPerspective();">US Edition 20150901</a></li>-->
-                                <li><a href="javascript:void(0);" onclick="switchRelease('AMA Edition 20180131', 'en-edition', 'v20180131', '900000000000509007', 'http://ama-browser.termspace.com/api/snomed');
-                                        reloadCurrentPerspective();">AMA Edition 20180131</a></li>
+                                <li><a href="javascript:void(0);" onclick="switchRelease('SOLOR Edition 20171114', 'en-edition', 'v20171114', '900000000000509007', 'http://ama-browser.termspace.com/api/snomed');
+                                        reloadCurrentPerspective();">SOLOR Edition 20171114</a></li>
                             </ul>
                         </li>
                         <li class="navbar-btn" id="perspective-selector">
@@ -1024,9 +1024,9 @@
                         <!--<a class="btn btn-primary btn-lg" role="button" onclick="switchRelease('United States Edition 20150901', 'us-edition', 'v20150901', '900000000000509007', 'https://browser-aws-1.ihtsdotools.org/api/snomed');-->
                                 <!--switchLanguage('en_US', 'img/flags/us.png', true);-->
                                 <!--switchToFullHeight(404684003, 138875005);"><img src="img/flags/us.png">&nbsp;&nbsp;&nbsp;Go browsing...</span><br><span class="small">United States edition</span></a>-->
-                        <a class="btn btn-primary btn-lg" role="button" onclick="switchRelease('AMA Edition 20180131', 'en-edition', 'v20180131', '900000000000509007', 'http://ama-browser.termspace.com/api/snomed');
+                        <a class="btn btn-primary btn-lg" role="button" onclick="switchRelease('SOLOR Edition 20171114', 'en-edition', 'v20171114', '900000000000509007', 'http://ama-browser.termspace.com/api/snomed');
                                 switchLanguage('en-US', 'img/flags/us.png', true);
-                                switchToFullHeight(404684003, 138875005);"><img src="img/flags/us.png">&nbsp;&nbsp;&nbsp;Go browsing...</span><br><span class="small">AMA edition</span></a>
+                                switchToFullHeight(404684003, 138875005);"><img src="img/flags/us.png">&nbsp;&nbsp;&nbsp;Go browsing...</span><br><span class="small">SOLOR edition</span></a>
                     </p>
                     <!--<p>-->
                         <!--&nbsp;&nbsp;<span class="i18n" data-i18n-id="i18n_or">or</span>&nbsp;&nbsp;-->
@@ -1041,7 +1041,7 @@
                         <!--<br><img src="img/flags/se.png">&nbsp;&nbsp;&nbsp;<a href="http://www.socialstyrelsen.se/facksprak" target="_blank">The National Board of Health and Welfare, Sweden</a>-->
                         <!--<br><img src="img/flags/gb.png">&nbsp;&nbsp;&nbsp;<a href="http://systems.hscic.gov.uk/data/uktc" target="_blank">The Health and Social Care Information Centre (HSCIC), United Kingdom</a>-->
                         <!--<br><img src="img/flags/us.png">&nbsp;&nbsp;&nbsp;<a href="http://www.nlm.nih.gov/" target="_blank">National Library of Medicine (NLM), United States</a>-->
-                        <!--<br><img src="img/flags/uy.png">&nbsp;&nbsp;&nbsp;<a href="http://www.agesic.gub.uy/innovaportal/v/4425/1/agesic/programa-saluduy.html" target="_blank">Salud.uy, AMA</a>-->
+                        <!--<br><img src="img/flags/uy.png">&nbsp;&nbsp;&nbsp;<a href="http://www.agesic.gub.uy/innovaportal/v/4425/1/agesic/programa-saluduy.html" target="_blank">Salud.uy, SOLOR</a>-->
                     <!--</p>-->
 
                     <!--<p><span class="i18n" data-i18n-id="i18n_home4">If you would like to get involved in the development, this code is available under an Apache v2 open source license. You can also find more information on the current backlog of feedback that is up for possible development here - <a href="https://confluence.ihtsdotools.org/display/TOOLS/IHTSDO+SNOMED+CT+Browser" target="_blank">IHTSDO Browser service page</a></span></p>-->
@@ -1072,7 +1072,7 @@
             </div>
             <footer>
                 <p>
-                    <small><b>&copy; AMA 2018</b></small>
+                    <small><b>&copy; SOLOR 2018</b></small>
                 </p>
             </footer>
 
