--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             };
 
             var options = {
-                serverUrl: "http://ama-browser.termspace.com/api/snomed",
+                serverUrl: "http://solor-browser.termspace.com/api/snomed",
                 edition: "en-edition",
                 release: "v20171114",
                 releaseName: "SOLOR Edition 20171114",
@@ -928,7 +928,7 @@
                                         <!--reloadCurrentPerspective();">UK Edition 20151001</a></li>-->
                                 <!--<li><a href="javascript:void(0);" onclick="switchRelease('United States Edition 20150901', 'us-edition', 'v20150901', '900000000000509007', 'https://browser-aws-1.ihtsdotools.org/api/snomed');-->
                                         <!--reloadCurrentPerspective();">US Edition 20150901</a></li>-->
-                                <li><a href="javascript:void(0);" onclick="switchRelease('SOLOR Edition 20171114', 'en-edition', 'v20171114', '900000000000509007', 'http://ama-browser.termspace.com/api/snomed');
+                                <li><a href="javascript:void(0);" onclick="switchRelease('SOLOR Edition 20171114', 'en-edition', 'v20171114', '900000000000509007', 'http://solor-browser.termspace.com/api/snomed');
                                         reloadCurrentPerspective();">SOLOR Edition 20171114</a></li>
                             </ul>
                         </li>
@@ -1024,7 +1024,7 @@
                         <!--<a class="btn btn-primary btn-lg" role="button" onclick="switchRelease('United States Edition 20150901', 'us-edition', 'v20150901', '900000000000509007', 'https://browser-aws-1.ihtsdotools.org/api/snomed');-->
                                 <!--switchLanguage('en_US', 'img/flags/us.png', true);-->
                                 <!--switchToFullHeight(404684003, 138875005);"><img src="img/flags/us.png">&nbsp;&nbsp;&nbsp;Go browsing...</span><br><span class="small">United States edition</span></a>-->
-                        <a class="btn btn-primary btn-lg" role="button" onclick="switchRelease('SOLOR Edition 20171114', 'en-edition', 'v20171114', '900000000000509007', 'http://ama-browser.termspace.com/api/snomed');
+                        <a class="btn btn-primary btn-lg" role="button" onclick="switchRelease('SOLOR Edition 20171114', 'en-edition', 'v20171114', '900000000000509007', 'http://solor-browser.termspace.com/api/snomed');
                                 switchLanguage('en-US', 'img/flags/us.png', true);
                                 switchToFullHeight(404684003, 138875005);"><img src="img/flags/us.png">&nbsp;&nbsp;&nbsp;Go browsing...</span><br><span class="small">SOLOR edition</span></a>
                     </p>
