--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <title>HSPC SOLOR Browser</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="viewport" content="width=device-width">
-		<meta name="description" content="IHTSDO SNOMED CT Browser">
-		<meta name="author" content="IHTSDO">
+		<meta name="description" content="SOLOR: SNOMED CT Browser">
+		<meta name="author" content="SOLOR">
 		<link rel="icon" type="image/png"  href="favicon.png">
 
         <script src="external-libs/jquery-2.1.0.min.js" type="text/javascript"></script>
@@ -903,7 +903,7 @@
                         <span class="icon-bar"></span>
                     </button>
 
-                    <img class="pull-left " src="img/solor_color-small.png" style="height:50px" alt="IHTSDO delivering SNOMED, the global clinical terminology">
+                    <img class="pull-left " src="img/solor_color-small.png" style="height:50px" alt="solor.io">
                     <a class="navbar-brand" href="javascript:void(0);" onclick="initialize();" id="navBarBrand">
                         <strong>
                             &nbsp;&nbsp;HSPC SOLOR Browser</strong></a>
