--- a/index.html
+++ b/index.html
@@ -991,11 +991,11 @@
             <!-- Welcome Perspective -->
             <div id="welcome-perspective"  class="bperspective">
                 <div class="jumbotron">
-                    <h1><span>SOLOR: the SNOMED CT Extension Browser</span></h1>
+                    <h1><span>SOLOR Extension Browser</span></h1>
                     <p><span>SOLOR is a System Of LOgical Representation (SOLOR) that integrates specific terminologies such as – but not limited to – SNOMED CT, LOINC, RX-Norm. These three terminologies form the foundation of SOLOR because they are meaningful use standards, where when integrated together, they represent the breadth of information necessary for clinical data representation.</span></p>
                     <p>SOLOR is an open, collaborative project among numerous participants, large and small.  The initiative is currently guided by the Veterans Health Administration, and coordinated within the Healthcare Services Platform Consortium (HSPC).</p>
                     <br>
-                    <p>Visit <a href="http://solor.io/" target="_blank">solor.io</a> for more information.</p>
+                    <p>Visit <a href="http://solor.io/" target="_blank">solor.io</a> and <a href="https://www.hspconsortium.org/" target="_blank">HSPC</a> for more information.</p>
                     <p>
                         <a class="btn btn-primary btn-lg" role="button" onclick="switchRelease('SOLOR Edition 20171114', 'en-edition', 'v20171114', '900000000000509007', 'http://solor-browser.termspace.com/api/snomed');
                                 switchLanguage('en-US', 'img/flags/en.png', true);
