--- a/index.html
+++ b/index.html
@@ -991,7 +991,7 @@
             <!-- Welcome Perspective -->
             <div id="welcome-perspective"  class="bperspective">
                 <div class="jumbotron">
-                    <h1><span>SOLOR Extension Browser</span></h1>
+                    <h1><span>SOLOR Edition Browser</span></h1>
                     <p><span>SOLOR is a System Of LOgical Representation (SOLOR) that integrates specific terminologies such as – but not limited to – SNOMED CT, LOINC, RX-Norm. These three terminologies form the foundation of SOLOR because they are meaningful use standards, where when integrated together, they represent the breadth of information necessary for clinical data representation.</span></p>
                     <p>SOLOR is an open, collaborative project among numerous participants, large and small.  The initiative is currently guided by the Veterans Health Administration, and coordinated within the <a href="https://www.hspconsortium.org/" target="_blank">Healthcare Services Platform Consortium (HSPC)</a>.</p>
                     <br>
