Updating front end

--- a/index.html
+++ b/index.html
@@ -999,7 +999,7 @@
                     <p>
                         <a class="btn btn-primary btn-lg" role="button" onclick="switchRelease('SOLOR Edition 20171114', 'en-edition', 'v20171114', '900000000000509007', 'http://solor-browser.termspace.com/api/snomed');
                                 switchLanguage('en-US', 'img/flags/en.png', true);
-                                switchToFullHeight(404684003, 138875005);"><img src="img/solor-world.png" style="height:25px">&nbsp;&nbsp;&nbsp;Go browsing...</span><br><span class="small">SOLOR edition</span></a>
+                                switchToFullHeight(404684003, 138875005);"><img src="img/solor-world.png" style="height:25px">&nbsp;&nbsp;&nbsp;Go browsing...</span><br><span class="small">SOLOR Edition</span></a>
                     </p>
                     <!--<p>-->
                         <!--&nbsp;&nbsp;<span class="i18n" data-i18n-id="i18n_or">or</span>&nbsp;&nbsp;-->
