Updating front end

--- a/index.html
+++ b/index.html
@@ -1045,7 +1045,7 @@
             </div>
             <footer>
                 <p>
-                    <small><b>&copy; SOLOR 2018</b></small>
+                    <small><b>&copy; HSPC 2018</b></small>
                 </p>
             </footer>
 
