--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
             var options = {
                 serverUrl: "http://ama-browser.termspace.com/api/snomed",
                 edition: "en-edition",
-                release: "v20180131",
-                releaseName: "AMA Edition 20180131",
+                release: "v20180731",
+                releaseName: "AMA Edition Daily Build",
                 showIds: false,
                 hideNotAcceptable: true,
                 displayInactiveDescriptions: false,
@@ -251,7 +251,7 @@
 
                 var release = QueryString.release;
                 if (typeof release == "undefined" || release == null || release == "") {
-                    release = "v20180131";
+                    release = "v20180731";
                 }
                 options.release = release;
 
@@ -928,8 +928,8 @@
                                         <!--reloadCurrentPerspective();">UK Edition 20151001</a></li>-->
                                 <!--<li><a href="javascript:void(0);" onclick="switchRelease('United States Edition 20150901', 'us-edition', 'v20150901', '900000000000509007', 'https://browser-aws-1.ihtsdotools.org/api/snomed');-->
                                         <!--reloadCurrentPerspective();">US Edition 20150901</a></li>-->
-                                <li><a href="javascript:void(0);" onclick="switchRelease('AMA Edition 20180131', 'en-edition', 'v20180131', '900000000000509007', 'http://ama-browser.termspace.com/api/snomed');
-                                        reloadCurrentPerspective();">AMA Edition 20180131</a></li>
+                                <li><a href="javascript:void(0);" onclick="switchRelease('AMA Edition Daily Build', 'en-edition', 'v20180731', '900000000000509007', 'http://ama-browser.termspace.com/api/snomed');
+                                        reloadCurrentPerspective();">AMA Edition Daily Build</a></li>
                             </ul>
                         </li>
                         <li class="navbar-btn" id="perspective-selector">
@@ -1024,7 +1024,7 @@
                         <!--<a class="btn btn-primary btn-lg" role="button" onclick="switchRelease('United States Edition 20150901', 'us-edition', 'v20150901', '900000000000509007', 'https://browser-aws-1.ihtsdotools.org/api/snomed');-->
                                 <!--switchLanguage('en_US', 'img/flags/us.png', true);-->
                                 <!--switchToFullHeight(404684003, 138875005);"><img src="img/flags/us.png">&nbsp;&nbsp;&nbsp;Go browsing...</span><br><span class="small">United States edition</span></a>-->
-                        <a class="btn btn-primary btn-lg" role="button" onclick="switchRelease('AMA Edition 20180131', 'en-edition', 'v20180131', '900000000000509007', 'http://ama-browser.termspace.com/api/snomed');
+                        <a class="btn btn-primary btn-lg" role="button" onclick="switchRelease('AMA Edition Daily Build', 'en-edition', 'v20180731', '900000000000509007', 'http://ama-browser.termspace.com/api/snomed');
                                 switchLanguage('en-US', 'img/flags/us.png', true);
                                 switchToFullHeight(404684003, 138875005);"><img src="img/flags/us.png">&nbsp;&nbsp;&nbsp;Go browsing...</span><br><span class="small">AMA edition</span></a>
                     </p>
