--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 
             function start() {
                 // Read parameters
-                countryIcons["11000207107"] = "en";
+                countryIcons["11000207107"] = "ama";
                 $(function() {
                     $.extend($.fn.disableTextSelect = function() {
                         return this.each(function() {
