--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             }
 
             var enableQueriesInFullPerspective = true;
-            var selectedLanguage = 'ES';
+            var selectedLanguage = 'es';
             var selectedFlag = 'img/flags/ar.png';
             var currentPerspective = "home";
 
@@ -96,7 +96,7 @@
                 serverUrl: "http://test-termspace-logstash.termspace.com/api/snomed",
                 edition: "en-edition",
                 release: "v20180131",
-                releaseName: "AMA Edition ",
+                releaseName: "PAMI Edición ",
                 showIds: false,
                 hideNotAcceptable: true,
                 displayInactiveDescriptions: false,
@@ -207,6 +207,7 @@
             function start() {
                 // Read parameters
                 countryIcons["11000207107"] = "ama";
+                countryIcons["11000209107"] = "pami";
                 $(function() {
                     $.extend($.fn.disableTextSelect = function() {
                         return this.each(function() {
@@ -963,26 +964,9 @@
                     <p><span class="i18n" data-i18n-id="i18n_home3">Please provide any feedback by clicking on the feedback button at the top of the page. Your feedback is essential to the evolution and improvement of this service.</span></p>
                           <a class="btn btn-primary btn-lg" role="button" onclick="switchRelease();
                                 switchLanguage('ES', 'img/flags/ar.png', true);
-                                switchToFullHeight(404684003, 138875005);"><img src="img/flags/us.png">&nbsp;&nbsp;&nbsp;Go browsing...</span><br><span class="small">AMA edition</span></a>
+                                switchToFullHeight(404684003, 138875005);"><img src="img/flags/ar.png">&nbsp;&nbsp;&nbsp;Go browsing...</span><br><span class="small">PAMI Edición</span></a>
                     </p>
-                    <!--<p>-->
-                        <!--&nbsp;&nbsp;<span class="i18n" data-i18n-id="i18n_or">or</span>&nbsp;&nbsp;-->
-                        <!--<a class="btn btn-primary " role="button" onclick="tourStart();"><span class="i18n" data-i18n-id="i18n_take_tour">take the Tour...</span></a></p>-->
-
-                    <!--<p><span class="i18n" data-i18n-id="i18n_home8">Many thanks to the IHTSDO Member countries who have provided their extensions in this browser. If you would like to enquire further about any of the Member country extensions in this browser, please contact the relevant National Release Center via the URL's below:</span></p>-->
-                    <!--<p class="lead">-->
-                        <!--<img src="img/flags/au.png">&nbsp;&nbsp;&nbsp;<a href="http://www.nehta.gov.au" target="_blank">National E-Health Transition Authority (NEHTA), Australia</a>-->
-                        <!--<br><img src="img/flags/ca.png">&nbsp;&nbsp;&nbsp;<a href="https://www.infoway-inforoute.ca/en/" target="_blank">Canada Health Infoway, Canada</a>-->
-                        <!--<br><img src="img/flags/dk.png">&nbsp;&nbsp;&nbsp;<a href="http://www.ssi.dk/English/HealthdataandICT/The%20National%20eHealth%20Authority.aspx" target="_blank">The National eHealth Authority, Denmark</a>-->
-                        <!--<br><img src="img/flags/nl.png">&nbsp;&nbsp;&nbsp;<a href="http://www.nictiz.nl/page/Standaarden/SNOMED-CT" target="_blank">Nictiz, Netherlands</a>-->
-                        <!--<br><img src="img/flags/se.png">&nbsp;&nbsp;&nbsp;<a href="http://www.socialstyrelsen.se/facksprak" target="_blank">The National Board of Health and Welfare, Sweden</a>-->
-                        <!--<br><img src="img/flags/gb.png">&nbsp;&nbsp;&nbsp;<a href="http://systems.hscic.gov.uk/data/uktc" target="_blank">The Health and Social Care Information Centre (HSCIC), United Kingdom</a>-->
-                        <!--<br><img src="img/flags/us.png">&nbsp;&nbsp;&nbsp;<a href="http://www.nlm.nih.gov/" target="_blank">National Library of Medicine (NLM), United States</a>-->
-                        <!--<br><img src="img/flags/uy.png">&nbsp;&nbsp;&nbsp;<a href="http://www.agesic.gub.uy/innovaportal/v/4425/1/agesic/programa-saluduy.html" target="_blank">Salud.uy, AMA</a>-->
-                    <!--</p>-->
-
-                    <!--<p><span class="i18n" data-i18n-id="i18n_home4">If you would like to get involved in the development, this code is available under an Apache v2 open source license. You can also find more information on the current backlog of feedback that is up for possible development here - <a href="https://confluence.ihtsdotools.org/display/TOOLS/IHTSDO+SNOMED+CT+Browser" target="_blank">IHTSDO Browser service page</a></span></p>-->
-                </div>
+                  </div>
                 <p><span class="i18n" data-i18n-id="i18n_home6"><span class="btn-success"><em>Releases</em></span> will allow the selection of SNOMED CT content from the International Edition or other extensions, with specific dates.</span></p>
                 <p><span class="i18n" data-i18n-id="i18n_home7"><span class="btn-primary"><em>Perspectives</em></span>  are pre-defined browsing layouts for specific purposes. Use the <a href="javascript:void(0);" onclick="switchToResponsiveLayout(404684003, 404684003, 138875005);">responsive perspective</a> for best results in tablets and phones.</span></p>
             </div>
@@ -1009,7 +993,7 @@
             </div>
             <footer>
                 <p>
-                    <small><b>&copy; AMA 2018</b></small>
+                    <small><b>&copy; PAMI 2018</b></small>
                 </p>
             </footer>
 
