added PAMI branch

--- a/index.html
+++ b/index.html
@@ -93,23 +93,23 @@
 
 
             var options = {
-                serverUrl: "http://test-termspace-logstash.termspace.com/api/snomed",
-                edition: "en-edition",
-                release: "v20180131",
-                releaseName: "PAMI Edición ",
+                serverUrl: mongoDetails.mongoRestServer,
+                edition: mongoDetails.database,
+                release: mongoDetails.collection,
+                releaseName: paramDetails.editionName,
                 showIds: false,
                 hideNotAcceptable: true,
                 displayInactiveDescriptions: false,
                 displaySynonyms: true,
                 selectedView: "inferred",
                 displayChildren: false,
-                langRefset: ["900000000000509007"],
+                langRefset: [paramDetails.languageRefset],
                 closeButton: false,
                 collapseButton: false,
                 linkerButton: true,
                 subscribersMarker: true,
                 searchMode: "partialMatching",
-                searchLang: "english",
+                searchLang: "spanish",
                 diagrammingMarkupEnabled: false,
                 statusSearchFilter: "activeOnly",
                 highlightByEffectiveTime: "false"
